--- a/Website/index.html
+++ b/Website/index.html
@@ -46,28 +46,28 @@
         <div class="carousel-track">
           <!-- オリジナル6要素と複製6要素で無限ループ -->
           <div class="feature-card">
-            <h3>✨ 複数のメニュー統合</h3>
-            <p>アニメーションを一元管理し、効率的な制御を実現します。</p>
+            <h3>✨ パラメーター最適化</h3>
+            <p>複数のメニューを自動で統合し、アバターのパラメーター数を最小限にします！</p>
           </div>
           <div class="feature-card">
             <h3>📸 サムネイル撮影機能</h3>
-            <p>自動でサムネイルを撮影し、メニュー画像を差し替え可能です。</p>
+            <p>自動でポーズのサムネイルを撮影し、メニューをアバターごとに差し替えます！</p>
           </div>
           <div class="feature-card">
-            <h3>🎯 トラッキング抑制</h3>
-            <p>指だけを動かす、無効化など柔軟に設定できます。</p>
+            <h3>🎯 トラッキング制御</h3>
+            <p>細やかにトラッキングを設定でき、指だけを動かすなどポーズごとに柔軟に変更できます！</p>
           </div>
           <div class="feature-card">
             <h3>🔧 コンポーネントで設定完了</h3>
-            <p>コンポーネントベースで、プレハブ化にも対応。</p>
+            <p>コンポーネントベースで設定を行え、プレハブ化にも対応しています！</p>
           </div>
           <div class="feature-card">
-            <h3>🧠 より人間らしい動きに</h3>
-            <p>静的ポーズでも自然な動作に変換します。</p>
+            <h3>🧠 より人間らしい動きに変換</h3>
+            <p>動きのないポーズを、自動で動画撮影に最適化された自然な動きに変換します！</p>
           </div>
           <div class="feature-card">
-            <h3>📂 許可なしで再配布OK</h3>
-            <p>アニメーションやポーズデータを自由に配布可能。</p>
+            <h3>📂 許諾無しで商用利用OK</h3>
+            <p>本ツールに対応したアニメーションやポーズデータを、商用非商用問わず自由に配布できます！</p>
           </div>
         </div>
       </div>
@@ -75,7 +75,7 @@
   </section>
 
   <br>
-  
+
   <!-- Booth ギャラリー -->
   <section class="booth-gallery">
     <div class="container">
