--- a/Website/index.html
+++ b/Website/index.html
@@ -92,6 +92,8 @@
           <!-- JS でアイテムと複製を埋め込み -->
         </div>
       </div>
+      <br>
+      <p><small>商品の掲載依頼はこちらのフォームへ => <a href="https://www.hhotatea.com/">APL対応商品登録フォーム</a></small></p>
     </div>
   </section>
   
