--- a/Website/index.html
+++ b/Website/index.html
@@ -93,7 +93,7 @@
         </div>
       </div>
       <br>
-      <p><small>商品の掲載依頼はこちらのフォームへ => <a href="https://www.hhotatea.com/">APL対応商品登録フォーム</a></small></p>
+      <p><small>商品の掲載依頼はこちら => <a href="https://forms.gle/L543ePjPLmEt4gBz7">APL対応商品登録フォーム</a></small></p>
     </div>
   </section>
   
