Webページの更新

--- a/Website/index.html
+++ b/Website/index.html
@@ -38,14 +38,26 @@
   <main class="hero">
     <div class="container">
       <img src="banner.png" alt="APL Banner" class="hero-banner">
+      
+      <div class="hero-buttons">
+        <a href="https://discord.gg/j393GwU4Es">
+          <img alt="Discord" src="https://img.shields.io/discord/1370943019666378764?style=flat-square&logo=Discord&logoColor=ffffff&logoSize=auto&label=Discord&color=%235865F2&cacheSeconds=60">
+        </a>
+        <a href="https://hhotatea.booth.pm/items/6902222">
+          <img alt="Booth" src="https://img.shields.io/badge/%F0%9F%8F%A0Booth-Donate-fc4d50">
+        </a>
+      </div>
+
       <p class="hero-description">
         <strong>AvatarPoseLibrary (APL)</strong> は、Unity 上で VRChat 向けのアバター用ポーズを管理・適用するためのツールです。アバターのポーズを効率的に制御し、VRChat アバターの制作やカスタマイズを支援します。
       </p>
+
       <div class="hero-buttons">
         <a href="vcc://vpm/addRepo?url=https://HhotateA.github.io/AvatarPoseLibrary/index.json" class="btn">VCCに追加</a>
         <a href="https://github.com/HhotateA/AvatarPoseLibrary/releases/latest/" class="btn unity-download">UnityPackageをダウンロード</a>
         <a href="https://github.com/HhotateA/AvatarPoseLibrary/wiki" class="btn">マニュアル</a>
       </div>
+
     </div>
   </main>
 
@@ -92,7 +104,6 @@
           <!-- JS でアイテムと複製を埋め込み -->
         </div>
       </div>
-      <br>
       <p><small>商品の掲載依頼はこちら => <a href="https://forms.gle/L543ePjPLmEt4gBz7">APL対応商品登録フォーム</a></small></p>
     </div>
   </section>
