--- a/Website/index.html
+++ b/Website/index.html
@@ -44,7 +44,7 @@
           <img alt="Discord" src="https://img.shields.io/discord/1370943019666378764?style=flat-square&logo=Discord&logoColor=ffffff&logoSize=auto&label=Discord&color=%235865F2&cacheSeconds=60">
         </a>
         <a href="https://hhotatea.booth.pm/items/6902222">
-          <img alt="Booth" src="https://img.shields.io/badge/%F0%9F%8F%A0Booth-Donate-fc4d50">
+          <img alt="Booth" src="https://img.shields.io/badge/%F0%9F%8F%A0Booth-Donation-fc4d50">
         </a>
       </div>
 
@@ -104,7 +104,11 @@
           <!-- JS でアイテムと複製を埋め込み -->
         </div>
       </div>
-      <p><small>商品の掲載依頼はこちら => <a href="https://forms.gle/L543ePjPLmEt4gBz7">APL対応商品登録フォーム</a></small></p>
+      <p class="form-link">
+        <small>
+          <a href="https://forms.gle/L543ePjPLmEt4gBz7">APL対応商品登録フォーム</a>
+        </small>
+      </p>
     </div>
   </section>
   
